Bison.output
Terminals unused in grammar

    ERROR
    HASH
    FLEC


Grammar

    0 $accept: prog $end

    1 prog: ε
    2     | bloques

    3 bloques: bloque
    4        | bloques bloque

    5 $@1: ε

    6 bloque: ENTRADAHASH $@1 elementos

    7 $@2: ε

    8 bloque: FLECHA $@2 elementosdos
    9       | DECHASHOTRO

   10 $@3: ε

   11 elementosdos: pre_enter ENTER $@3 post_enter
   12             | bloque

   13 pre_enter: elemento_pre
   14          | pre_enter elemento_pre

   15 elemento_pre: CHARMA
   16             | CHARMI
   17             | PUNCTFASTA
   18             | ENTERO

   19 post_enter: elemento_post
   20           | post_enter elemento_post

   21 elemento_post: CHARMA
   22              | PUNCTFASTA
   23              | ENTERO
   24              | ENTER
   25              | CHARMI
   26              | SPACE
   27              | PUNCT

   28 elementos: elemento elementos
   29          | ε

   30 elemento: CHARMA
   31         | PUNCT
   32         | SPACE
   33         | ENTER
   34         | CHARMI


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENTRADAHASH <filename> (258) 6
    CHARMA <caracter> (259) 15 21 30
    CHARMI <caracter> (260) 16 25 34
    PUNCT <caracter> (261) 27 31
    ENTERO <num> (262) 18 23
    ERROR (263)
    HASH (264)
    FLECHA (265) 8
    PUNCTFASTA <caracter> (266) 17 22
    SPACE (267) 26 32
    ENTER (268) 11 24 33
    FLEC (269)
    DECHASHOTRO <filename> (270) 9


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    prog (17)
        on left: 1 2
        on right: 0
    bloques (18)
        on left: 3 4
        on right: 2 4
    bloque (19)
        on left: 6 8 9
        on right: 3 4 12
    $@1 (20)
        on left: 5
        on right: 6
    $@2 (21)
        on left: 7
        on right: 8
    elementosdos (22)
        on left: 11 12
        on right: 8
    $@3 (23)
        on left: 10
        on right: 11
    pre_enter (24)
        on left: 13 14
        on right: 11 14
    elemento_pre (25)
        on left: 15 16 17 18
        on right: 13 14
    post_enter (26)
        on left: 19 20
        on right: 11 20
    elemento_post (27)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    elementos (28)
        on left: 28 29
        on right: 6 28
    elemento (29)
        on left: 30 31 32 33 34
        on right: 28


State 0

    0 $accept: • prog $end

    ENTRADAHASH  shift, and go to state 1
    FLECHA       shift, and go to state 2
    DECHASHOTRO  shift, and go to state 3

    $default  reduce using rule 1 (prog)

    prog     go to state 4
    bloques  go to state 5
    bloque   go to state 6


State 1

    6 bloque: ENTRADAHASH • $@1 elementos

    $default  reduce using rule 5 ($@1)

    $@1  go to state 7


State 2

    8 bloque: FLECHA • $@2 elementosdos

    $default  reduce using rule 7 ($@2)

    $@2  go to state 8


State 3

    9 bloque: DECHASHOTRO •

    $default  reduce using rule 9 (bloque)


State 4

    0 $accept: prog • $end

    $end  shift, and go to state 9


State 5

    2 prog: bloques •
    4 bloques: bloques • bloque

    ENTRADAHASH  shift, and go to state 1
    FLECHA       shift, and go to state 2
    DECHASHOTRO  shift, and go to state 3

    $default  reduce using rule 2 (prog)

    bloque  go to state 10


State 6

    3 bloques: bloque •

    $default  reduce using rule 3 (bloques)


State 7

    6 bloque: ENTRADAHASH $@1 • elementos

    CHARMA  shift, and go to state 11
    CHARMI  shift, and go to state 12
    PUNCT   shift, and go to state 13
    SPACE   shift, and go to state 14
    ENTER   shift, and go to state 15

    $default  reduce using rule 29 (elementos)

    elementos  go to state 16
    elemento   go to state 17


State 8

    8 bloque: FLECHA $@2 • elementosdos

    ENTRADAHASH  shift, and go to state 1
    CHARMA       shift, and go to state 18
    CHARMI       shift, and go to state 19
    ENTERO       shift, and go to state 20
    FLECHA       shift, and go to state 2
    PUNCTFASTA   shift, and go to state 21
    DECHASHOTRO  shift, and go to state 3

    bloque        go to state 22
    elementosdos  go to state 23
    pre_enter     go to state 24
    elemento_pre  go to state 25


State 9

    0 $accept: prog $end •

    $default  accept


State 10

    4 bloques: bloques bloque •

    $default  reduce using rule 4 (bloques)


State 11

   30 elemento: CHARMA •

    $default  reduce using rule 30 (elemento)


State 12

   34 elemento: CHARMI •

    $default  reduce using rule 34 (elemento)


State 13

   31 elemento: PUNCT •

    $default  reduce using rule 31 (elemento)


State 14

   32 elemento: SPACE •

    $default  reduce using rule 32 (elemento)


State 15

   33 elemento: ENTER •

    $default  reduce using rule 33 (elemento)


State 16

    6 bloque: ENTRADAHASH $@1 elementos •

    $default  reduce using rule 6 (bloque)


State 17

   28 elementos: elemento • elementos

    CHARMA  shift, and go to state 11
    CHARMI  shift, and go to state 12
    PUNCT   shift, and go to state 13
    SPACE   shift, and go to state 14
    ENTER   shift, and go to state 15

    $default  reduce using rule 29 (elementos)

    elementos  go to state 26
    elemento   go to state 17


State 18

   15 elemento_pre: CHARMA •

    $default  reduce using rule 15 (elemento_pre)


State 19

   16 elemento_pre: CHARMI •

    $default  reduce using rule 16 (elemento_pre)


State 20

   18 elemento_pre: ENTERO •

    $default  reduce using rule 18 (elemento_pre)


State 21

   17 elemento_pre: PUNCTFASTA •

    $default  reduce using rule 17 (elemento_pre)


State 22

   12 elementosdos: bloque •

    $default  reduce using rule 12 (elementosdos)


State 23

    8 bloque: FLECHA $@2 elementosdos •

    $default  reduce using rule 8 (bloque)


State 24

   11 elementosdos: pre_enter • ENTER $@3 post_enter
   14 pre_enter: pre_enter • elemento_pre

    CHARMA      shift, and go to state 18
    CHARMI      shift, and go to state 19
    ENTERO      shift, and go to state 20
    PUNCTFASTA  shift, and go to state 21
    ENTER       shift, and go to state 27

    elemento_pre  go to state 28


State 25

   13 pre_enter: elemento_pre •

    $default  reduce using rule 13 (pre_enter)


State 26

   28 elementos: elemento elementos •

    $default  reduce using rule 28 (elementos)


State 27

   11 elementosdos: pre_enter ENTER • $@3 post_enter

    $default  reduce using rule 10 ($@3)

    $@3  go to state 29


State 28

   14 pre_enter: pre_enter elemento_pre •

    $default  reduce using rule 14 (pre_enter)


State 29

   11 elementosdos: pre_enter ENTER $@3 • post_enter

    CHARMA      shift, and go to state 30
    CHARMI      shift, and go to state 31
    PUNCT       shift, and go to state 32
    ENTERO      shift, and go to state 33
    PUNCTFASTA  shift, and go to state 34
    SPACE       shift, and go to state 35
    ENTER       shift, and go to state 36

    post_enter     go to state 37
    elemento_post  go to state 38


State 30

   21 elemento_post: CHARMA •

    $default  reduce using rule 21 (elemento_post)


State 31

   25 elemento_post: CHARMI •

    $default  reduce using rule 25 (elemento_post)


State 32

   27 elemento_post: PUNCT •

    $default  reduce using rule 27 (elemento_post)


State 33

   23 elemento_post: ENTERO •

    $default  reduce using rule 23 (elemento_post)


State 34

   22 elemento_post: PUNCTFASTA •

    $default  reduce using rule 22 (elemento_post)


State 35

   26 elemento_post: SPACE •

    $default  reduce using rule 26 (elemento_post)


State 36

   24 elemento_post: ENTER •

    $default  reduce using rule 24 (elemento_post)


State 37

   11 elementosdos: pre_enter ENTER $@3 post_enter •
   20 post_enter: post_enter • elemento_post

    CHARMA      shift, and go to state 30
    CHARMI      shift, and go to state 31
    PUNCT       shift, and go to state 32
    ENTERO      shift, and go to state 33
    PUNCTFASTA  shift, and go to state 34
    SPACE       shift, and go to state 35
    ENTER       shift, and go to state 36

    $default  reduce using rule 11 (elementosdos)

    elemento_post  go to state 39


State 38

   19 post_enter: elemento_post •

    $default  reduce using rule 19 (post_enter)


State 39

   20 post_enter: post_enter elemento_post •

    $default  reduce using rule 20 (post_enter)
